--- a/package.json
+++ b/package.json
@@ -13,18 +13,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.1.3",
+    "@angular/cdk": "^10.2.5",
     "@angular/common": "~10.1.3",
     "@angular/compiler": "~10.1.3",
     "@angular/core": "~10.1.3",
     "@angular/fire": "^6.0.3",
     "@angular/forms": "~10.1.3",
+    "@angular/material": "^10.2.5",
     "@angular/platform-browser": "~10.1.3",
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
+    "firebase": "^7.13.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
-    "firebase": "^7.13.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1001.3",
